[package]
name = "vault-wasm"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# Self-root the workspace so cargo does not walk up past a worktree's
# excluding Cargo.toml into the outer monorepo. See vault-core/Cargo.toml.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
vault-core = { git = "ssh://git@github.com/blindkeep-vault/vault-core.git", default-features = false, features = ["drops", "client"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
uuid = { version = "1", features = ["js"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
zeroize = "1"

